[gd_scene load_steps=5 format=3 uid="uid://7nqxb4yf0iv"]

[ext_resource type="Script" path="res://Myassets/Scenes/RegisterAndLogin/login.gd" id="1_rwmrx"]
[ext_resource type="Texture2D" uid="uid://b7ohyih5763gy" path="res://Myassets/Img/Fondo.png" id="2_68b2j"]
[ext_resource type="Texture2D" uid="uid://drdfsa15trexc" path="res://Resources/img/fondoTablero.png" id="3_vinlh"]
[ext_resource type="Texture2D" uid="uid://dc30hbou8vcxw" path="res://Resources/img/pergamino.png" id="4_8ntwd"]

[node name="Login" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 66.0
offset_top = 14.0
offset_right = 66.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rwmrx")

[node name="fondo" type="TextureRect" parent="."]
offset_left = -232.0
offset_top = -54.0
offset_right = 1238.0
offset_bottom = 823.0
scale = Vector2(0.880247, 0.826699)
texture = ExtResource("2_68b2j")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="."]
offset_top = 72.0
offset_right = 826.0
offset_bottom = 545.0
texture = ExtResource("3_vinlh")

[node name="TextureRect2" type="TextureRect" parent="."]
offset_left = 251.0
offset_top = 103.0
offset_right = 585.0
offset_bottom = 533.0
texture = ExtResource("4_8ntwd")

[node name="Username" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 307.0
offset_top = 221.0
offset_right = 519.0
offset_bottom = 276.0

[node name="Password" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 308.0
offset_top = 287.0
offset_right = 520.0
offset_bottom = 342.0

[node name="ButtonAccept" type="Button" parent="."]
layout_mode = 0
offset_left = 311.0
offset_top = 361.0
offset_right = 404.0
offset_bottom = 393.0
text = "ACCEPT"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 385.0
offset_top = 178.0
offset_right = 464.0
offset_bottom = 212.0
text = "LOGIN"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(390, 308)

[node name="ButtonRegister" type="Button" parent="."]
layout_mode = 0
offset_left = 426.0
offset_top = 362.0
offset_right = 514.0
offset_bottom = 394.0
text = "REGISTER"

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.013
anchor_bottom = 0.035
offset_left = 330.0
offset_top = 400.0
offset_right = 478.024
offset_bottom = 414.32
text = "BACK"

[connection signal="pressed" from="ButtonAccept" to="." method="_on_button_accept_pressed"]
[connection signal="pressed" from="ButtonRegister" to="." method="_on_button_register_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
